Was created functionality to mark all messages as read. Was created functionality to mute/unMute channel. Was created functionality to block/unBlock user in the ConversationInfoActivity.kt page.

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -144,6 +144,7 @@
                 android:text="@string/notifications"
                 android:textColor="@color/sceyt_color_text_themed"
                 android:textSize="@dimen/mediumTextSize"
+                android:theme="@style/SwitchStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/avatar" />
@@ -156,6 +157,7 @@
                 android:layout_gravity="end"
                 android:text="@string/sceyt_dark_theme"
                 android:textColor="@color/sceyt_color_black_themed"
+                android:theme="@style/SwitchStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/switchNotifications" />
