Was created functionality to block/unblock user in the channels page.

--- a/app/src/main/res/layout/sceyt_item_out_files_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_files_message.xml
@@ -47,7 +47,9 @@
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="8dp"
+            android:autoLink="phone|web|email"
             android:textColor="@color/sceyt_color_text_themed"
+            android:textIsSelectable="true"
             android:textSize="@dimen/mediumTextSize"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
