--- a/app/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -46,7 +46,9 @@
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="8dp"
+            android:autoLink="phone|web|email"
             android:textColor="@color/sceyt_color_text_themed"
+            android:textIsSelectable="true"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
