--- a/app/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -46,12 +46,12 @@
             android:singleLine="true"
             android:textColor="@color/sceyt_color_accent"
             android:textSize="@dimen/extraSmallTextSize"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Henry Willian" />
 
         <include
@@ -74,7 +74,9 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:autoLink="phone|web|email"
             android:textColor="@color/sceyt_color_text_themed"
+            android:textIsSelectable="true"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
