--- a/app/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
+++ b/app/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize">
 
@@ -22,26 +23,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:padding="10dp"
-        android:text="@string/add_members"
         android:animateLayoutChanges="true"
+        android:padding="10dp"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/bigTextSize"
         android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/icBack"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Title" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/input"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
+        android:animateLayoutChanges="true"
         android:background="@null"
         android:hint="@string/search"
         android:padding="10dp"
-        android:animateLayoutChanges="true"
         android:textColor="@color/sceyt_color_text_themed"
         android:textColorHint="@color/sceyt_color_hint"
         android:visibility="gone"
