--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -78,7 +78,20 @@
                 app:sceytUiChannelTitleTextSize="@dimen/_50sdp"
                 app:sceytUiUnreadMessageCounterTextColor="@color/sceyt_color_green" />
 
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/fabNewChannel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_margin="16dp"
+                android:backgroundTint="@color/sceyt_color_accent"
+                app:icon="@drawable/ic_add"
+                app:iconTint="@color/sceyt_color_white"
+                app:layout_constraintBottom_toBottomOf="@+id/viewPager"
+                app:layout_constraintEnd_toEndOf="parent" />
+
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
