--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,4 +71,10 @@
     <style name="SwitchStyle">
         <item name="android:colorForeground">@color/sceyt_color_gray_400</item>
     </style>
+
+    <style name="EditTextTheme">
+        <item name="colorControlNormal">@color/sceyt_color_divider</item>
+        <item name="colorControlActivated">@color/sceyt_color_accent</item>
+        <item name="colorControlHighlight">@color/sceyt_color_accent</item>
+    </style>
 </resources>
