Was started creating functionality and UI for message link.

--- a/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_deleted_message.xml
@@ -69,7 +69,7 @@
             android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
-            app:sceytDateStatusViewDateTextColor="#7C7E8E"
+            app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
             app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
             app:sceytDateStatusViewFirstStatus="false"
             app:sceytDateStatusViewStatusIconSize="16dp"
