--- a/app/src/main/res/layout/sceyt_item_inc_link_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_link_message.xml
@@ -2,31 +2,57 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="4dp">
+
+    <com.sceyt.chat.ui.presentation.customviews.SceytAvatarView
+        android:id="@+id/avatar"
+        android:layout_width="@dimen/_28sdp"
+        android:layout_height="@dimen/_28sdp"
+        android:layout_alignTop="@+id/layoutDetails"
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"
+        app:sceytAvatarViewTextSize="15sp"
+        tools:sceytAvatarViewFullName="Ar"
+        tools:visibility="visible" />
 
     <com.sceyt.chat.ui.presentation.customviews.SceytToReplayLineView
         android:id="@+id/toReplayLine"
         android:layout_width="10dp"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/layoutDetails"
         android:layout_alignTop="@+id/layoutDetails"
         android:layout_alignBottom="@+id/tvReplayCount"
-        android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="9dp"
-        android:visibility="gone"
-        app:sceytToReplayLineViewToLeft="true" />
+        android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/sceyt_bg_out_message"
-        android:maxWidth="@dimen/_190sdp"
-        android:minWidth="@dimen/_190sdp">
+        android:layout_toEndOf="@+id/avatar"
+        android:background="@drawable/sceyt_bg_inc_message"
+        android:maxWidth="@dimen/bodyMaxWidth"
+        android:minWidth="@dimen/bodyMaxWidth">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvUserName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:textColor="@color/sceyt_color_accent"
+            android:textSize="@dimen/extraSmallTextSize"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Henry Willian" />
 
         <ViewStub
             android:id="@+id/viewReplay"
@@ -38,7 +64,7 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvUserName" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
@@ -50,69 +76,65 @@
             android:autoLink="phone|web|email"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReplay"
             tools:text="Lore ipsum  is the correct text which" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvFiles"
+        <include
+            android:id="@+id/layoutLinkPreview"
+            layout="@layout/sceyt_message_link_preview_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/messageDate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/messageBody"
-            tools:itemCount="3"
-            tools:listitem="@layout/sceyt_message_file_item" />
+            tools:visibility="visible" />
 
         <com.sceyt.chat.ui.presentation.customviews.SceytDateStatusView
             android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
             android:layout_marginBottom="2dp"
             android:paddingHorizontal="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
-            app:layout_constraintEnd_toEndOf="@id/rvFiles"
+            app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
+            app:layout_constraintEnd_toEndOf="parent"
             app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
             app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
             app:sceytDateStatusViewFirstStatus="false"
-            app:sceytDateStatusViewStatusIconMargin="5dp"
-            app:sceytDateStatusViewStatusIconSize="15dp"
-            tools:sceytDateStatusViewDateText="00:37"
-            tools:sceytDateStatusViewStatusIcon="@drawable/sceyt_ic_status_delivered" />
+            app:sceytDateStatusViewStatusIconSize="16dp"
+            tools:sceytDateStatusViewDateText="00:37" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ViewStub
-        android:id="@+id/rvReactions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/layoutDetails"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="3dp"
-        android:layout="@layout/sceyt_message_reactions_recycler_view"
-        android:orientation="horizontal"
-        android:paddingTop="4dp"
-        android:visibility="gone" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvReplayCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rvReactions"
-        android:layout_marginEnd="2dp"
-        android:layout_toStartOf="@+id/toReplayLine"
+        android:layout_marginStart="2dp"
+        android:layout_toEndOf="@+id/toReplayLine"
         android:includeFontPadding="false"
         android:paddingVertical="4dp"
         android:textColor="@color/sceyt_color_accent"
         android:textSize="@dimen/tinyTextSize"
         android:visibility="gone"
         tools:text="34 reply" />
+
+    <ViewStub
+        android:id="@+id/rvReactions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layoutDetails"
+        android:layout_marginStart="3dp"
+        android:layout_toEndOf="@+id/avatar"
+        android:layout="@layout/sceyt_message_reactions_recycler_view"
+        android:orientation="horizontal"
+        android:paddingTop="4dp"
+        android:visibility="gone" />
 
 </RelativeLayout>
