--- a/app/src/main/res/layout/sceyt_item_out_deleted_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_deleted_message.xml
@@ -39,7 +39,7 @@
             android:includeFontPadding="false"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@id/layoutDetails"
-            app:sceytDateStatusViewDateTextColor="#7C7E8E"
+            app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
             app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
             app:sceytDateStatusViewFirstStatus="false"
             app:sceytDateStatusViewStatusIconMargin="5dp"
