--- a/app/src/main/res/layout/sceyt_item_inc_link_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_link_message.xml
@@ -34,9 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/avatar"
-        android:background="@drawable/sceyt_bg_inc_message"
-        android:maxWidth="@dimen/bodyMaxWidth"
-        android:minWidth="@dimen/bodyMaxWidth">
+        android:background="@drawable/sceyt_bg_inc_message">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
@@ -52,6 +50,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Henry Willian" />
 
         <ViewStub
@@ -68,26 +67,29 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="8dp"
             android:autoLink="phone|web|email"
+            android:paddingBottom="8dp"
+            android:linksClickable="false"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReplay"
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Lore ipsum  is the correct text which" />
 
         <include
             android:id="@+id/layoutLinkPreview"
             layout="@layout/sceyt_message_link_preview_container"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/bodyMaxWidth"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginBottom="4dp"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/messageDate"
             app:layout_constraintEnd_toEndOf="parent"
