--- a/app/src/main/res/layout/sceyt_item_out_link_message.xml
+++ b/app/src/main/res/layout/sceyt_item_out_link_message.xml
@@ -24,9 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/sceyt_bg_out_message"
-        android:maxWidth="@dimen/_190sdp"
-        android:minWidth="@dimen/_190sdp">
+        android:background="@drawable/sceyt_bg_out_message">
 
         <ViewStub
             android:id="@+id/viewReplay"
@@ -42,26 +40,28 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="8dp"
             android:autoLink="phone|web|email"
+            android:linksClickable="false"
+            android:paddingBottom="8dp"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReplay"
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Lore ipsum  is the correct text which" />
 
         <include
             android:id="@+id/layoutLinkPreview"
             layout="@layout/sceyt_message_link_preview_container"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/bodyMaxWidth"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="12dp"
             android:layout_marginBottom="4dp"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/messageDate"
