--- a/app/src/main/res/layout/sceyt_message_link_preview_container.xml
+++ b/app/src/main/res/layout/sceyt_message_link_preview_container.xml
@@ -9,6 +9,9 @@
         android:id="@+id/previewImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/tvLinkTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,12 +21,12 @@
         android:id="@+id/tvLinkTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/sceyt_color_text_themed"
         android:textSize="@dimen/mediumTextSize"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tvLinkDesc"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/previewImage"
         tools:text="Link preview info title" />
