--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -117,7 +117,7 @@
                 android:textColor="@color/sceyt_color_text_themed"
                 android:textColorHint="@color/sceyt_color_hint"
                 android:textSize="@dimen/mediumTextSize"
-                android:theme="@style/EditTextTheme"
+                android:theme="@style/SceytEditTextTheme"
                 app:layout_constraintBottom_toBottomOf="@id/avatar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/avatar"
@@ -182,7 +182,7 @@
                 android:hint="@string/enter_channel_uri"
                 android:textColor="@color/sceyt_color_text_themed"
                 android:textColorHint="@color/sceyt_color_hint"
-                android:theme="@style/EditTextTheme"
+                android:theme="@style/SceytEditTextTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/uriTitle"
                 app:layout_constraintTop_toBottomOf="@id/uriTitle" />
@@ -211,9 +211,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="-4dp"
                 android:hint="@string/enter_a_label"
-                android:textColor="@color/sceyt_color_divider"
+                android:textColor="@color/sceyt_color_text_themed"
                 android:textColorHint="@color/sceyt_color_hint"
-                android:theme="@style/EditTextTheme"
+                android:theme="@style/SceytEditTextTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/labelTitle"
                 app:layout_constraintTop_toBottomOf="@id/labelTitle" />
@@ -238,7 +238,7 @@
                 android:hint="@string/enter_a_metadata"
                 android:textColor="@color/sceyt_color_text_themed"
                 android:textColorHint="@color/sceyt_color_hint"
-                android:theme="@style/EditTextTheme"
+                android:theme="@style/SceytEditTextTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/metaDataTitle" />
