--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,11 +68,15 @@
         <item name="android:textSize">10sp</item>
     </style>
 
-    <style name="SwitchStyle">
+    <style name="SceytSwitchStyle">
         <item name="android:colorForeground">@color/sceyt_color_gray_400</item>
     </style>
 
-    <style name="EditTextTheme">
+    <style name="SceytProgressBarWhite" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/sceyt_color_white</item>
+    </style>
+
+    <style name="SceytEditTextTheme">
         <item name="colorControlNormal">@color/sceyt_color_divider</item>
         <item name="colorControlActivated">@color/sceyt_color_accent</item>
         <item name="colorControlHighlight">@color/sceyt_color_accent</item>
