--- a/app/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
+++ b/app/src/main/res/layout/sceyt_message_reactions_recycler_view.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rvReactions"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    tools:itemCount="1"
+    tools:listitem="@layout/sceyt_item_reaction" />
