--- a/app/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/app/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -118,7 +118,7 @@
 
     <ViewStub
         android:id="@+id/rvReactions"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/bodyMaxWidth"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layoutDetails"
         android:layout_marginStart="3dp"
