--- a/SceytChatUiKit/src/main/res/values-night/sceyt_colors.xml
+++ b/SceytChatUiKit/src/main/res/values-night/sceyt_colors.xml
@@ -12,5 +12,6 @@
     <color name="sceyt_color_status_bar">#010212</color>
     <color name="sceyt_color_bottom_nav">#1A1B2A</color>
     <color name="sceyt_color_text_themed">#ffffff</color>
+    <color name="sceyt_color_last_message_from">#B1B4C2</color>
     <color name="sceyt_color_dialog_bg_themed">#1A1B2A</color>
 </resources>
