--- a/SceytChatUiKit/src/main/res/values/sceyt_colors.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_colors.xml
@@ -15,6 +15,7 @@
     <color name="sceyt_color_bg_inc_message">#F1F2F6</color>
     <color name="sceyt_color_divider">#CDCDCF</color>
     <color name="sceyt_color_text_themed">#060A26</color>
+    <color name="sceyt_color_last_message_from">#060A26</color>
     <color name="sceyt_color_input">#F1F2F6</color>
     <color name="sceyt_color_dialog_bg_themed">#FFFFFF</color>
 
