--- a/app/src/main/res/layout/fragment_channels.xml
+++ b/app/src/main/res/layout/fragment_channels.xml
@@ -74,8 +74,7 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                app:sceytUiChannelTitleTextSize="@dimen/_50sdp"
-                app:sceytUiUnreadMessageCounterTextColor="@color/sceyt_color_green" />
+                app:sceytUiChannelTitleTextSize="@dimen/_50sdp" />
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/fabNewChannel"
